--- a/wallet/pom.xml
+++ b/wallet/pom.xml
@@ -7,8 +7,8 @@
 	<artifactId>wallet</artifactId>
 	<packaging>apk</packaging>
 
-	<version>3.01.423</version>
-	<name>digitalcoin Wallet</name>
+	<version>0.1.0</version>
+	<name>MaxCoin Wallet</name>
 
 	<parent>
 		<groupId>de.schildbach.wallet</groupId>
@@ -66,7 +66,7 @@
 		<!-- com.google.bitcoin.* -->
 		<dependency>
 			<groupId>org.bitcoinj</groupId>
-			<artifactId>digitalcoinj-core</artifactId>
+			<artifactId>maxcoinj-core</artifactId>
 			<version>0.12.3</version>
 		</dependency>
 
